--- a/os/net/app-layer/coap/Makefile.coap
+++ b/os/net/app-layer/coap/Makefile.coap
@@ -1,6 +1,6 @@
 MAKE_WITH_DTLS ?= 0
 MAKE_WITH_OSCORE ?= 0
-
+MAKE_WITH_GROUPCOM ?= 0
 
 ifeq ($(MAKE_WITH_OSCORE),1)
  MODULES += os/net/security/tinydtls/sha2
@@ -37,4 +37,6 @@ else ifeq ($(MAKE_WITH_DTLS),1)
  else
   ${error Unsupported CoAP DTLS keystore: $(MAKE_COAP_DTLS_KEYSTORE)}
  endif
+else ifeq ($(MAKE_WITH_GROUPCOM),1)
+ CFLAGS += -DWITH_GROUPCOM=1
 endif
