--- a/os/net/app-layer/coap/Makefile.coap
+++ b/os/net/app-layer/coap/Makefile.coap
@@ -41,19 +41,16 @@ endif
 
 
 ifeq ($(MAKE_WITH_GROUPCOM),1)
- CFLAGS += -DWITH_GROUPCOM=1
+  CFLAGS += -DWITH_GROUPCOM=1
  
-  ifeq ($(TARGET), zoul)
- 	#ecdsa is already included
-
-  else 
-	CFLAGS += -DSW_ECDSA=1
-	#defines for uECC
-	#assume Native
-	CFLAGS += -DuECC_PLATFORM=uECC_x86_64
-	#We will only use P256
-	CFLAGS += -DuECC_CURVE=uECC_secp256r1
-	
-  endif 
+  CFLAGS += -DSW_ECDSA=1
+  #defines for uECC
+  ifeq ($(TARGET), native)
+    CFLAGS += -DuECC_PLATFORM=uECC_x86_64
+  else
+    CFLAGS += -DuECC_PLATFORM=uECC_arm
+  endif
+  #We will only use P256
+  CFLAGS += -DuECC_CURVE=uECC_secp256r1
 
 endif
